@@ -66,6 +66,7 @@ Version 0.0.4b (in progress)
 * [Added] Clear search field button for pages with a search field.
 * [Removed] Redundant theme function calls.
 * [Fixed] Broken cookie consent code when cookie consent disabled in the Admin CP.
+* [Fixed] $_GET and $_POST vulnerability related to season parameter.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
